final touch article details

--- a/content/articles/shorts/comment-your-function.mdx
+++ b/content/articles/shorts/comment-your-function.mdx
@@ -5,6 +5,8 @@ excerpt: "This a simple guide to make sure we as a developer always comment on o
 copyrightCover: 'Photo by <a href="https://unsplash.com/@kommumikation?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Mika Baumeister</a> on <a href="https://unsplash.com/photos/a-close-up-of-a-book-on-a-table-dOdUKdgCzh0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>'
 ---
 
+## Introduction 
+
 Commenting is basically a way for someone to judge something, whether it's in terms of **good** or **bad** in the process, we will know whether we will improve or improve something, according to the comments given.
 \
 \
