migration several articles

--- a/content/articles/indonesian/mengenal-si-cantik-es6-part-1.mdx
+++ b/content/articles/indonesian/mengenal-si-cantik-es6-part-1.mdx
@@ -33,7 +33,7 @@ Dibagian ini kita akan mengenal lebih dalam lagi dengan si cantik **ES6**, fitur
 
 ---
 
-## I. Migrasi dar **var** Ke **let** atau **const**
+## 4. Migrasi dar **var** Ke **let** atau **const**
 
 Biasanya kita mendeklarasi sebuah variabel menggunakan `var`, nah didalam `ES6`, kita ada sebuah pilihan cara mendeklarasi sebuah variabel yaitu dengan `let` atau `const`. Lalu apa sih bedanya? pertama-tama kita akan membahas `var`
 
