--- a/content/articles/shorts/comment-your-function.mdx
+++ b/content/articles/shorts/comment-your-function.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Always comment your function..!!"
 date: "2020-11-26"
+updatedAt: "2020-11-26"
 excerpt: "This a simple guide to make sure we as a developer always comment on our code to establish the future of our app."
 copyrightCover: 'Photo by <a href="https://unsplash.com/@kommumikation?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Mika Baumeister</a> on <a href="https://unsplash.com/photos/a-close-up-of-a-book-on-a-table-dOdUKdgCzh0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>'
 ---
