--- a/content/articles/indonesian/mengenal-si-cantik-es6-part-1.mdx
+++ b/content/articles/indonesian/mengenal-si-cantik-es6-part-1.mdx
@@ -1,6 +1,7 @@
 ---
 title: Mengenal Si-Cantik ES6 (Part 1)
 date: "2018-05-17"
+updatedAt: "2018-05-17"
 excerpt: Pengenalan EcmaScript (ES6) bagian 1/2
 copyrightCover: 'Photo by <a href="https://unsplash.com/@growtika?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Growtika</a> on <a href="https://unsplash.com/photos/graphical-user-interface-qaedPly-Uro?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> '
 ---
