--- a/content/articles/indonesian/mengenal-si-cantik-es6-part-2.mdx
+++ b/content/articles/indonesian/mengenal-si-cantik-es6-part-2.mdx
@@ -1,6 +1,7 @@
 ---
 title: Mengenal Si-Cantik ES6 (Part 2)
 date: "2018-10-23"
+updatedAt: "2018-10-23"
 excerpt: Pengenalan EcmaScript (ES6) bagian 2/2
 copyrightCover: 'Photo by <a href="https://unsplash.com/@growtika?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Growtika</a> on <a href="https://unsplash.com/photos/a-computer-screen-with-a-keyboard-and-a-box-with-a-logo-YOEHA0Ou8ZY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> '
 ---
